@@ -15,11 +15,13 @@ ftgamma \- screen gamma calibration helper
 .
 The
 .B ftgamma
-demo program opens a window showing vertical grey bars, where the grey
-in the upper half is shown as real color while the grey in the bottom
-half is a 50%/50% mixture of black and white pixels.
-Your monitor's gamma value roughly corresponds to the bar where the upper
-and the lower half are equally bright if seen from some distance.
+demo program opens a window showing series of grey stripes filled with
+solid color and checkered pattern of pixels.  Your monitor's gamma value
+roughly corresponds to the horizontal position where the solid and checkered
+stripes are equally bright when seen from some distance. Three brightness
+targets are explored: 33%, 50%, and 67%. If the input-output curve of your
+monitor does not follow ideal power law relationship, you might observe
+slightly different gamma values at different brightness levels.
 .
 .PP
 This program does not have any options.
